--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 
         #content {
             position: absolute;
-            top: 0px;
+            top: 0;
             left: 0;
             right: 0;
             bottom: 0;
             margin: auto;
-            padding-top: 10px;
             box-sizing: border-box;
             -webkit-user-select: none;
             -webkit-app-region: drag;
-            background-color: #80E65E;
+            background-color: #eeeeee;
         }
 
         .titlebar {
@@ -35,6 +34,8 @@
             position: absolute;
         }
     </style>
+
+    <script>require('./main.js');</script>
 
 </head>
 <body>
